# subtuner

./: .gitignore  ALGORITHMS.md  ARCHITECTURE.md  ASS_ADJUSTMENTS.md  OVERLAP_PRESERVATION.md  PROJECT_SETUP.md  README.md  pyproject.toml  requirements.txt  test_ass_adjustments.py
docs/: USAGE.md
subtuner/: __init__.py  __main__.py  cli.py  config.py  errors.py
subtuner/batch/: __init__.py
subtuner/extraction/: __init__.py  extractor.py
subtuner/optimization/: __init__.py  engine.py  statistics.py
subtuner/optimization/algorithms/: __init__.py  anticipator.py  duration_adjuster.py  merger.py  rebalancer.py  validator.py
subtuner/parsers/: __init__.py  ass_parser.py  base.py  srt_parser.py  vtt_parser.py
subtuner/statistics/: __init__.py  reporter.py
subtuner/video/: __init__.py  analyzer.py
subtuner/writers/: __init__.py  ass_writer.py  base.py  srt_writer.py  vtt_writer.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_integration.py  test_optimization_engine.py
